// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form dropdown component should render disabled when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  />
  <select
    class="govuk-select "
    disabled=""
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
    <option
      value="A"
    >
      isA
    </option>
    <option
      value="B"
    >
      isB
    </option>
    <option
      value="C"
    >
      isC
    </option>
  </select>
</div>
`;

exports[`Form dropdown component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  />
  <select
    class="govuk-select "
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
  </select>
</div>
`;

exports[`Form dropdown component should render with error when passed 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  />
  <span
    class="govuk-error-message"
    id="radio-group-error"
  >
    Some error message
  </span>
  <select
    class="govuk-select govuk-select--error"
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
    <option
      value="A"
    >
      isA
    </option>
    <option
      value="B"
    >
      isB
    </option>
    <option
      value="C"
    >
      isC
    </option>
  </select>
</div>
`;

exports[`Form dropdown component should render with hint when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  />
  <span
    class="govuk-hint"
  >
    Put some text in the box below
  </span>
  <select
    class="govuk-select "
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
    <option
      value="A"
    >
      isA
    </option>
    <option
      value="B"
    >
      isB
    </option>
    <option
      value="C"
    >
      isC
    </option>
  </select>
</div>
`;

exports[`Form dropdown component should render with label when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  >
    My text field
  </label>
  <select
    class="govuk-select "
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
    <option
      value="A"
    >
      isA
    </option>
    <option
      value="B"
    >
      isB
    </option>
    <option
      value="C"
    >
      isC
    </option>
  </select>
</div>
`;

exports[`Form dropdown component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="radio-group"
    id="radio-group-label"
  />
  <select
    class="govuk-select "
    id="radio-group"
    name="radio-group"
  >
    <option
      value=""
    />
    <option
      selected=""
      value="A"
    >
      isA
    </option>
    <option
      value="B"
    >
      isB
    </option>
    <option
      value="C"
    >
      isC
    </option>
  </select>
</div>
`;
